Adding scripting and modulizing the code

--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
-    "manifest_version": 3,
-    "name": "Leetcode Timer",
-    "description": "Timer for Leetcode that records time taken for each question and stores in csv file",
-    "version": "1.0",
-    "action": {
-      "default_popup": "leetcodeTimer.html",
-      "default_icon": "images/leetcode_timer_icon.png"
-    },
-    "permissions":[
-        "activeTab",
-        "tabs",
-        "storage"
-    ],
-    "background":{
-        "service_worker": "background/leetcode_background_script.js"
-    }
+  "manifest_version": 3,
+  "name": "Leetcode Timer",
+  "description": "Timer for Leetcode that records time taken for each question and stores in csv file",
+  "version": "1.0",
+  "action": {
+    "default_popup": "leetcodeTimer.html",
+    "default_icon": "images/leetcode_timer_icon.png"
+  },
+  "permissions": [
+    "activeTab",
+    "tabs",
+    "storage",
+    "scripting"
+  ],
+  "background": {
+    "service_worker": "background/leetcode_background_script.js"
   }
+}
