--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,9 @@
     "storage",
     "scripting"
   ],
+  "host_permissions": [
+    "https://leetcode.com/problems/*"
+  ],
   "background": {
     "service_worker": "background/leetcode_background_script.js"
   }
