Adding the final good code

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
     "activeTab",
     "tabs",
     "storage",
-    "scripting"
+    "scripting",
+    "webNavigation"
   ],
   "host_permissions": [
     "https://leetcode.com/problems/*"
